--- a/Report/bibfile.bib
+++ b/Report/bibfile.bib
@@ -1,16 +1,32 @@
 @book{Kim2011Kalman,
-	note = {[Online; accessed 2023-02-26]},
 	author = {Kim, Phil and Huh, Lynn},
 	year = {2011},
 	publisher = {CreateSpace},
 	title = {Kalman filter for beginners: With {MATLAB} examples},
 }
 @book{Oppenheim2013Discrete,
-	note = {[Online; accessed 2023-02-26]},
 	author = {Oppenheim, Alan V. and Schafer, Ronald W.},
 	year = {2013},
 	month = {jul 23},
 	title = {Discrete-{Time} {Signal} {Processing}},
 }
 
+@article{Topology, title={A Kalman Filter for Nonlinear Attitude Estimation Using Time Variable Matrices and Quaternions}, volume={20}, ISSN={1424-8220}, url={http://dx.doi.org/10.3390/s20236731}, DOI={10.3390/s20236731}, number={23}, journal={Sensors}, publisher={MDPI AG}, author={Deibe, Álvaro and Antón Nacimiento, José Augusto and Cardenal, Jesús and López Peña, Fernando}, year={2020}, month={Nov}, pages={6731} }
+
+@misc{KalmanFilter,
+  author = {Huang, Yuchao},
+  title = {KalmanFilter},
+  year = {2019},
+  howpublished = {\url{https://github.com/ycHepth/KalmanFilter%7D%7D}},
+}
+
+
+
+
+@misc{STM32MCUWikiSolutions,
+  author = {{STMicroelectronics}},
+  title = {{STM32 MCU Wiki Solutions}},
+  howpublished = {\url{https://wiki.st.com/stm32mcu/wiki/Solutions%7D%7D}},
+
+}
 
